@@ -114,11 +114,11 @@ public abstract class FileDataSourceQueryChooser
 
         for (int i = 0; i < files.length; i++) {
             //LDB: mod to append standard extension to save file names
-        	String fname = files[i].getAbsolutePath();
+          String fname = files[i].getAbsolutePath();
             if (fname.lastIndexOf(".") == -1) {
-            	fname = fname + "." + extensions[0];  //first extension (i.e. shp)
+              fname = fname + "." + extensions[0];  //first extension (i.e. shp)
             }
-        	File file = new File(fname);
+          File file = new File(fname);
             queries.addAll(toDataSourceQueries(file));
             //queries.addAll(toDataSourceQueries(files[i]));
         }
@@ -316,4 +316,13 @@ public abstract class FileDataSourceQueryChooser
     public String[] getExtensions() {
         return extensions;
     }
+
+    public String getDescription() {
+        return description;
+    }
+
+    public Class getDataSourceClass() {
+        return dataSourceClass;
+    }
+    
 }
